--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "type": "git",
     "url": "git+https://github.com/ya3kd/spriggit-action-lib.git"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "license": "MIT",
   "author": {
     "name": "Yak",
@@ -77,7 +80,10 @@
     }
   },
   "lint-staged": {
-    "*.ts": ["prettier --write", "eslint --cache --cache-location .eslintcache --fix"]
+    "*.ts": [
+      "prettier --write",
+      "eslint --cache --cache-location .eslintcache --fix"
+    ]
   },
   "release": {
     "branches": [
