--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spriggit-action-lib",
+  "name": "@yak3d/spriggit-action-lib",
   "version": "1.0.0",
   "description": "A template for creating npm packages using TypeScript and VSCode",
   "main": "./lib/index.js",
